# urban-dictionary-api.hs

./: .gitignore  README.md  urban-dictionary-api.cabal
app/: Main.hs
src/: Urban.hs
test/: Spec.hs
