name:                urban-dictionary-api
version:             0.1.0.0
synopsis:            An API client for www.urbandictionary.com
description:         Please see README.md
homepage:            http://github.com/euank/urban-dictionary-api.hs
license:             AGPL
license-file:        LICENSE
author:              Euan
maintainer:          euank@euank.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Urban
  build-depends:       base >= 4.7 && < 5,
                       http-client > 0.4 && < 0.5,
                       http-types > 0.8 && < 0.9,
                       aeson > 0.8 && < 0.9,
                       bytestring > 0.10 && < 0.11,
                       binary > 0.5,
                       text > 1.2 && < 1.3
  default-language:    Haskell2010

test-suite ud-api-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       hspec,
                       QuickCheck,
                       urban-dictionary-api,
                       regex-posix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/euank/urban-dictionary-api.hs
